syntax = "proto3";

package yunpian;


service Send {
    rpc BizType (BizTypeResponse) returns (BizTypeResponse);
    rpc Code (CodeResource) returns (CodeResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
    rpc Notice (EventResource) returns (EventResource);
}

message SendResource {
    int64 userId = 1;
    string sid = 2;
    string provider = 3;
    int32 bizType = 4;
    string mobile = 5;
    string content = 6;
    int64 success = 7;
    string message = 8;
    int64 id = 9;
}

message MapType {
    int32 key = 1;
    string value = 2;
}

message BizTypeResponse {
    repeated MapType list = 1;
}

message CodeResource {
    string mobile = 1;
    int32 bizType = 2;
    int64 expires = 3;
}

message CodeResponse {
    bool success = 1;
    string expiresAt = 2;
    string code = 3;
}

message ValidateRequest {
    string mobile = 1;
    int32 bizType = 2;
    string code = 3;
}

message ValidateResponse {
    bool success = 1;
}

message EventResource {
    string mobile = 1;
    int32 bizType = 2;
    int64 templateId = 3;
    repeated string value = 4;
    int64 userId = 5;
    int32 mode = 6;

    bool success = 7;
}